Java 8 to Java 11